<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CustomPercentActivity" >

    <TextView
        android:id="@+id/txtCustomize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/customize"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtCustomize"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/very_happy"
        android:src="@drawable/ic_very_happy" />

    <TextView
        android:id="@+id/txtCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_toRightOf="@+id/imageView1"
        android:text="@string/very_happy"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/edVeryHappyCustom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtCurrency"
        android:layout_alignBottom="@+id/txtCurrency"
        android:layout_toLeftOf="@+id/textView2"
        android:ems="10"
        android:inputType="numberDecimal"
        android:width="@dimen/width_tip_percent" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/edVeryHappyCustom"
        android:layout_alignBottom="@+id/edVeryHappyCustom"
        android:layout_alignParentRight="true"
        android:text="%"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_below="@+id/imageView1"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/happy"
        android:src="@drawable/ic_happy" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_toRightOf="@+id/imageView2"
        android:text="@string/happy"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignRight="@+id/textView2"
        android:text="%"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/edHappyCustom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_toLeftOf="@+id/textView4"
        android:ems="10"
        android:inputType="numberDecimal"
        android:width="@dimen/width_tip_percent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView2"
        android:layout_below="@+id/imageView2"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/neutral"
        android:src="@drawable/ic_neutral" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView3"
        android:layout_toRightOf="@+id/imageView3"
        android:text="@string/neutral"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignParentRight="true"
        android:text="%"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/edNeutralCustom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView6"
        android:layout_alignBottom="@+id/textView6"
        android:layout_toLeftOf="@+id/textView6"
        android:ems="10"
        android:inputType="numberDecimal"
        android:width="@dimen/width_tip_percent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView3"
        android:layout_below="@+id/imageView3"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/unhappy"
        android:src="@drawable/ic_unhappy" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView4"
        android:layout_toRightOf="@+id/imageView4"
        android:text="@string/unhappy"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView7"
        android:layout_alignBottom="@+id/textView7"
        android:layout_alignParentRight="true"
        android:text="%"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/edUnhappyCustom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView8"
        android:layout_alignBottom="@+id/textView8"
        android:layout_toLeftOf="@+id/textView8"
        android:ems="10"
        android:inputType="numberDecimal"
        android:width="@dimen/width_tip_percent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="false"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/btnCustomCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/cancel"
            android:onClick="onCustomizeCancel"
            android:src="@drawable/ic_cancel" />

        <ImageButton
            android:id="@+id/btnCustomOk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/ok"
            android:onClick="onCustomizeOk"
            android:src="@drawable/ic_ok" />

    </LinearLayout>

</RelativeLayout>
